apps/infoserver-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: infoserver
  namespace: infoserver
  labels:
    app: infoserver
spec:
  replicas: 3
  selector:
    matchLabels:
      app: infoserver
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9113"
      labels:
        app: infoserver
    spec:
      containers:
      - name: nginx
        image: soulard.azurecr.io/nginx:aods-demo
        imagePullPolicy: IfNotPresent
        ports:
          - name: http
            containerPort: 80
        command:
          - nginx
          - -g
          - daemon off;
        volumeMounts:
          - name: infoserver-config
            mountPath: /etc/nginx/conf.d/default.conf
            subPath: default.conf
      - name: catsay
        image: soulard.azurecr.io/catsay:aods
        imagePullPolicy: IfNotPresent
        ports:
          - name: catsay
            containerPort: 8080
      - name: metrics
        image: soulard.azurecr.io/nginx-exporter:aods-demo
        imagePullPolicy: IfNotPresent
        command:
          - /usr/bin/exporter
          - -nginx.scrape-uri
          - http://127.0.0.1/status
        ports:
          - name: metrics
            containerPort: 9113
        livenessProbe:
          httpGet:
            path: /metrics
            port: metrics
          initialDelaySeconds: 15
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /metrics
            port: metrics
          initialDelaySeconds: 5
          timeoutSeconds: 1
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-config
          defaultMode: 0555
