apps/infoserver-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: infoserver-svc
  namespace: infoserver
  labels:
    app: infoserver
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: infoserver
